# routes/verificationRoutes.js
@@ -3,21 +3,11 @@
 import express from 'express';
 import * as verificationController from '../controllers/verificationController.js';
 import { validateHeaders, validateRequest } from '../utils/middleware.js';
-import { body } from 'express-validator';
+import {
+  validationValidation,
+  verificationValidation,
+} from '../utils/helpers.js';
 const router = express.Router();
-
-const verificationValidation = [
-  body('type').equals('BVN').withMessage('Verification type must be BVN'),
-  body('async').isBoolean().withMessage('async must be a boolean value'),
-  body('number')
-    .isString()
-    .matches(/^\d{11}$/)
-    .withMessage('BVN must be 11 digits'),
-  body('debitAccountNumber')
-    .isString()
-    .notEmpty()
-    .withMessage('debitAccountNumber is required'),
-];
 
 router.post(
   '/initiate',
@@ -26,6 +16,13 @@ router.post(
   validateRequest,
   verificationController.initiateVerification
 );
-router.post('/validate', verificationController.validateVerification);
+
+router.post(
+  '/validate',
+  validateHeaders,
+  validationValidation,
+  validateRequest,
+  verificationController.validateVerification
+);
 
 export default router;
